<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CloudUpp</string>
    <string name="surel">Email</string>
    <string name="menu_settings">Settings</string>
    <string name="sandi">Password</string>
    <string name="masuk">Sign In</string>
    <string name="daftar">Sign Up</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_daftar">Daftar</string>
    <string name="lupa">Forgot Password?</string>
    <string name="setuju">I agree to the Terms Of Service</string>
    <string name="daftarin">Submit</string>
    <string name="title_activity_show_cat">Files</string>
    <string name="title_activity_beranda">Files</string>
    <string name="sekip">Sekip</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="title_activity_semua_berkas">SemuaBerkas</string>
    <string name="image">Thumbs</string>
	<string name="all_files">All Files</string>
	<string name="github_label">guthuub</string>
	<string name="github">gihtuhabah</string>
	<string name="responsive_ui">responsip ui</string>
	 <string name="what_is_this">What is this?</string>
    <string name="responsive_explanation">This is an example of a UI that responds well to device type. On phones, the menu will be placed inside a SlidingMenu, while on tablets the menu will be exposed alongside the content because we have enough room to always show it.</string>
    <string name="about">About</string>
</resources>