<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tiledbackground"
    tools:context=".Daftar" >

    <EditText
        android:id="@+id/surelDaftar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/surel" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/sandiDaftar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/surelDaftar"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/sandi" />

    <Button
        android:id="@+id/btnDaftar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBox1"
        android:layout_centerHorizontal="true"
        android:text="@string/daftarin"
        android:textColor="#FFFFFF"
        android:enabled="false"
        
        />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sandiDaftar"
        android:layout_centerHorizontal="true"
        android:enabled="true"
        android:text="@string/setuju" />

</RelativeLayout>